Fixed description text going off screen
Fixed an issue where if the descript of an item is too long, it will go off screen in the item panel.

Closes #79

--- a/user/style.css
+++ b/user/style.css
@@ -334,6 +334,7 @@ td {
   flex-direction: column;
   list-style-type: disc;
   font-size: 13px;
+  overflow-wrap: break-word;
 }
 
 /*Checkout form styling*/
